chore(deps): Update Spring Boot to version 4.0.2 and refactor dependencies